--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jspdf-autotable": "^5.0.2",
     "mongoose": "^8.16.3",
     "multer": "^2.0.2",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.17.2",
     "xlsx": "^0.18.5"
