--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
@@ -22,7 +24,6 @@
     "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
-    "pdfkit": "^0.17.2",
-    "xlsx": "^0.18.5"
+    "pdfkit": "^0.17.2"
   }
 }
