--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
@@ -23,6 +24,7 @@
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.17.2",
+    "socket.io": "^4.8.1",
     "xlsx": "^0.18.5"
   }
 }
