--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -24,6 +23,8 @@
     "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
-    "pdfkit": "^0.17.2"
+    "pdfkit": "^0.17.2",
+    "socket.io": "^4.8.1",
+    "xlsx": "^0.18.5"
   }
 }
