--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@heroicons/react": "^2.2.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.540.0",
     "prop-types": "^15.8.1",
     "qrcode.react": "^4.2.0",
