--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.12.2",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.540.0",
