--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 node_modules/@swc/helpers/_/_apply_decorated_descriptor/package.json
+/node_modules
+/node_modules
+node_modules/@swc/helpers/_/_apply_decorated_descriptor/package.json
+node_modules/@swc/helpers/_/_apply_decorated_descriptor/package.json
+/node_modules/@swc
+/node_modules
+/node_modules
