--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://amithanuradhabandara_db_user:jvYET6XMJyqmhZGv@cluster0.cx2iwob.mongodb.net/
+MONGO_URI=mongodb+srv://amithanuradhabandara_db_user:jvYET6XMJyqmhZGv@cluster0.cx2iwob.mongodb.net/test
 JWT_SECRET=mysupersecretkey123
 //378CaNgHsOx1MP9W
