--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -148,3 +148,10 @@ Thumbs.db
 # Temporary folders
 tmp/
 temp/
+
+# Test/Development Scripts (optional - if you want to ignore)
+backend/scripts/
+backend/*Test*.js
+backend/*Sample*.js
+backend/seed*.js
+backend/clear*.js
